# Stellar-Airdrop-Token

./: README.md
build-list/: Cargo.toml  sdex-traders.json
build-list/src/: main.rs
frontend/: .env
frontend/src/: App.tsx  index.css
frontend/src/components/: ClaimButton.tsx  ConnectWallet.tsx
merkle/: proofs.json  sdex-traders.json
merkle/src/: main.rs
token/: Cargo.toml
token/src/: lib.rs
